--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
 
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./driveAPI.js" defer></script>
     <script src="./main.js" defer></script>
     <script src="./upload.js" defer></script>
