--- a/home.html
+++ b/home.html
@@ -15,9 +15,9 @@
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="./driveAPI.js" defer></script>
-    <script src="./main.js" defer></script>
-    <script src="./upload.js" defer></script>
+    <script src="./JS/driveAPI.js" defer></script>
+    <script src="./JS/main.js" defer></script>
+    <script src="./JS/upload.js" defer></script>
 
 </head>
 
