added media queries and changed css class names

--- a/home.html
+++ b/home.html
@@ -25,9 +25,9 @@
     <section class="sectionOne">
         <!-- <div class="blurredBackground"></div> -->
 
-        <div class="drop-zone">
-            <span class="drop-zone__prompt">ARRASTRA TUS ARCHIVOS AQUI</span>
-            <input type="file" name="myFile" class="drop-zone__input" multiple>
+        <div class="dropZone">
+            <span class="dropPrompt">ARRASTRA TUS ARCHIVOS AQUI</span>
+            <input type="file" name="myFile" class="dropInput" multiple>
         </div>
 
         <button class="uploadButton">
